# EsolangBench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
esolang_bench/: __init__.py
esolang_bench/benchmarking/: __init__.py  config.py  dataset_loader.py  metrics.py  openrouter_client.py  output_utils.py  prompt_templates.py  runner_utils.py
esolang_bench/benchmarking/agentic_scaffolding/: __init__.py  config.py  prompts.py  runner.py
esolang_bench/data/: esolang_benchmark.json  esolang_dataset.json  esolang_easy.json  esolang_easy_dataset.json  esolang_extra_hard_dataset.json  esolang_hard_dataset.json  esolang_medium_dataset.json  esolang_output_pred.json
esolang_bench/docs/: befunge98.md  brainfuck.md  piet.md  shakespeare.md  thue.md  unlambda.md  whitespace.md
esolang_bench/icl_examples/: shakespeare_icl.json  unlambda_icl.json  whitespace_icl.json
esolang_bench/interpreters/: __init__.py  base.py  befunge98.py  brainfuck.py  piet.py  shakespeare.py  thue.py  unlambda.py  utils.py  whitespace.py
tests/: test_befunge98.py  test_brainfuck.py  test_piet.py  test_shakespeare.py  test_unlambda.py  test_whitespace.py
